# json-data-base-python

./: LICENSE
jdb-py/: pyproject.toml
jdb-py/src/: data.json
